--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url:www.zenvent.com
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Zac
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          you@email.com
+  email:          zac@zenvent.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
