--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ url:              www.zenvent.com
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Zac
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          you@email.com
+  email:          zac@zenvent.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
