--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url:
 owner:
   name:           Zac
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
+  bio:            "My Bio..."
   email:          zac@zenvent.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
