--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Menu navigation links
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Shop
+  url: /shop/
 
-- title: External Link
-  url: http://mademistakes.com
+- title: Old Site
+  url: https://thezenvent.blogspot.com/
