--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,11 @@
 - title: My YouTube
   url: https://www.youtube.com/user/zenvent/
 
-- title: Shop
-  url: /shop/
+- title: Etsy Shop
+  url: https://www.etsy.com/shop/ZENVENT
 
 - title: Old Site
   url: https://thezenvent.blogspot.com/
+  
+- title: About
+  url: /about/
