--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ sass:
 disqus_shortname:   zenvent
 
 # Social
-analytics-id:       "default"
+analytics-id:       "122048100"
 facebook:           https://facebook.com/https://www.facebook.com/THEZENVENT/
 linkedin:           https://www.linkedin.com/in/zacrabtree/
 github:             https://github.com/zenvent
