--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ disqus_shortname:   zenvent
 
 # Social
 analytics-id:       "UA-122048100-1"
-facebook:           https://facebook.com/https://www.facebook.com/THEZENVENT/
+facebook:           https://www.facebook.com/THEZENVENT/
 linkedin:           https://www.linkedin.com/in/zacrabtree/
 github:             https://github.com/zenvent
 youtube:            https://www.youtube.com/user/zenvent/
