--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,9 @@ disqus_shortname:   zenvent
 # Social
 analytics-id:       "UA-122048100-1"
 facebook:           https://www.facebook.com/THEZENVENT/
-linkedin:           https://www.linkedin.com/in/zacrabtree/
+linkedin:           https://www.linkedin.com/in/crabz/
 github:             https://github.com/zenvent
-youtube:            https://www.youtube.com/user/zenvent/
+youtube:            https://www.youtube.com/@zenvent
 
 # personal
 email:              zac@zenvent.com
